# soci

example/: CMakeLists.txt  db_manager.cpp  db_manager.h  main.cpp
